PROJECT( ITKExamples )

CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )

FIND_PACKAGE( ITK REQUIRED )

IF( ITK_FOUND )
  INCLUDE( ${ITK_USE_FILE} )
ENDIF( ITK_FOUND )

SET( ITKModules
  ImageSegmentation
  ImageFiltering
)

FOREACH( var ${ITKModules} )
  ADD_SUBDIRECTORY( ${var} )
ENDFOREACH( var ${ITKModules} )
